# Soverign-AI-Hub

./: .env.example  .gitignore  ROADMAP.md  docker-compose.yml
deploy/llama-cpp/: Dockerfile
docs/: ARCHITECTURE.md
edge/: Dockerfile  Makefile  README.md  go.mod  main.go
edge/internal/chat/: chat.go
edge/internal/config/: config.go
edge/internal/llm/: llm.go
edge/internal/server/: server.go
edge/internal/store/: store.go
edge/internal/sync/: sync.go
edge/scripts/: install.sh
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/lib/: admin.ts  agents.ts  api.ts  code.ts  collections.ts  edge.ts  models.ts  multimodal.ts  streaming.ts
frontend/src/stores/: authStore.ts  chatStore.ts
gateway/: Dockerfile  alembic.ini  pyproject.toml
gateway/alembic/: env.py  init.sql
gateway/alembic/versions/: 001_add_plugin_tools.py  002_add_memory_tables.py  003_add_skills.py  004_add_work_tasks.py  005_add_agent_identity.py  006_add_automation_tables.py
gateway/app/: config.py  database.py  main.py
gateway/app/middleware/: airgap.py  audit.py  auth.py  rbac.py
gateway/app/models/: __init__.py  agent.py  agent_identity.py  audit.py  automation.py  base.py  code.py  collection.py  conversation.py  edge.py  memory.py  model_registry.py  plugin.py  user.py  (+5 more)
reports/sbom/: .gitkeep
scripts/: build-airgap-bundle.sh  build-edge.sh  download-models.sh  generate-sbom.sh  setup.sh
workers/: Dockerfile  pyproject.toml
workers/src/: document_processor.py  training_worker.py
(+125 files in other folders)
