[project]
name = "sovereign-ai-workers"
version = "0.1.0"
description = "Background document processing workers"
requires-python = ">=3.11"
dependencies = [
    "redis>=5.2.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "qdrant-client>=1.12.0",
    "pypdf>=5.0.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    "pytesseract>=0.3.13",
    "sentence-transformers>=3.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
